5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1638_2450.log
== TEST (2019-04-04 19:47:35) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
print(x,y)
-- OUTPUT:
ADA LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:47:47) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
print(x,y)
-- OUTPUT:
ADA LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:49:15) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
print(max(x,y))
print(min(x,y))
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:49:47) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
print(max(x,y))
print(min(x,y))
-- EXECUTION TIME:
0.20163
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:49:56) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
print(max(x,y))
print(min(x,y))
-- EXECUTION TIME:
0.137723
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:50:05) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
print(max(x,y))
print(min(x,y))
-- EXECUTION TIME:
0.196719
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:51:18) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ")
if (x > y):
	print(x,y)
else:
	print(y,x)
-- EXECUTION TIME:
0.123755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2450/main.py", line 3, in <module>
    if (x > y):
TypeError: unorderable types: builtin_function_or_method() > str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:51:20) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ")
if (x > y):
	print(x,y)
else:
	print(y,x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x > y):
TypeError: '>' not supported between instances of 'builtin_function_or_method' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:52:08) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ").upper
if (x > y):
	print(x,y)
else:
	print(y,x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x > y):
TypeError: '>' not supported between instances of 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:01:39) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ").upper
print(x>y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(x>y)
TypeError: '>' not supported between instances of 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:02:06) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ").upper
print(x>y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(x>y)
TypeError: '>' not supported between instances of 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:02:12) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ").upper
print(x==y)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:02:27) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ").upper
print(x==y)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:02:43) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
print(x==y)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:03:06) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
print(x==y)
print(x,y)
-- OUTPUT:
False
Ada Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:03:18) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ").upper
print(x==y)
print(x,y)
-- OUTPUT:
False
<built-in method upper of str object at 0x7f6e7b97f5e0> <built-in method upper of str object at 0x7f6e7b97f5a8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:03:34) 
-- CODE:
x = input("nome1: ").upper
y = input("nome2: ").upper
print(x,y)
print(x==y)

-- OUTPUT:
<built-in method upper of str object at 0x7f34d31185e0> <built-in method upper of str object at 0x7f34d31185a8>
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:03:54) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
print(x,y)
print(x==y)

-- OUTPUT:
ADA LEON
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:04:09) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
print(x,y)
print(x>y)

-- OUTPUT:
ADA LEON
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:04:19) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
print(x,y)
print(x>y)

-- OUTPUT:
ADA LEON
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:04:28) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
print(x,y)
print(x>y)

-- OUTPUT:
ADA LEON
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:05:39) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
if (x > y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:05:56) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
if (x > y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:06:20) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:06:28) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- EXECUTION TIME:
0.201548
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:06:34) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:06:47) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:07:03) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x > y):
	print(x)
	print(y)
else:
	print(y)
	print(x)

-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:07:25) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:07:33) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:07:44) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.198077
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:07:51) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.195542
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:07:57) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.146097
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:09:00) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:09:16) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.130705
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:12:51) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ").upper()
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:13:36) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper > y):
	print(y)
	print(x.upper())
else:
	print(x.upper())
	print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x.upper > y):
TypeError: '>' not supported between instances of 'builtin_function_or_method' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:13:49) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper() > y):
	print(y)
	print(x.upper())
else:
	print(x.upper())
	print(y)

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:13:57) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper() > y):
	print(y)
	print(x.upper())
else:
	print(x.upper())
	print(y)

-- EXECUTION TIME:
0.133664
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:14:36) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper() > y.upper()):
	print(y.upper())
	print(x.upper())
else:
	print(x.upper())
	print(y.upper())

-- EXECUTION TIME:
0.179503
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:14:51) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper() > y.upper()):
	print(y.upper())
	print(x)
else:
	print(x.upper())
	print(y.)

-- EXECUTION TIME:
0.1503
-- ERROR:
  File "/home/codebench/codes/1638/2450/main.py", line 8
    print(y.)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:20:47) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:21:07) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:21:46) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:22:31) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:22:46) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:22:55) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x > y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.149938
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:23:15) 
-- CODE:
x = input("nome1: ").upper()
y = input("nome2: ")
if (x.upper() > y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.21995
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:23:54) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper() > y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:24:03) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper() > y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:24:06) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper() > y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.148434
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:24:48) 
-- CODE:
x = input("nome1: ")
y = input("nome2: ")
if (x.upper() > y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)

-- EXECUTION TIME:
0.180984
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
